--- a/res_partner_mails_count/static/description/index.html
+++ b/res_partner_mails_count/static/description/index.html
@@ -4,8 +4,16 @@
             <h2 class="oe_slogan">Smart buttons for mails count</h2>
             <h3 class="oe_slogan">Display amount of messages from/to customer</h3>
             <p>
-                Open partner form and look up how many messages from and to some partner.
+                Open partner (customer) form and look up how many messages he got and sent:
                 <img class="oe_picture oe_screenshot" src="1.png"/>
+            </p> 
+            <p>
+                If you click any of this buttons:
+                <img class="oe_picture oe_screenshot" src="2.png"/>
+            </p>
+            <p>
+                You will see those mails:
+                <img class="oe_picture oe_screenshot" src="3.png"/>
             </p>
         </div>
 
