--- a/mail_archives/static/description/index.html
+++ b/mail_archives/static/description/index.html
@@ -4,6 +4,7 @@
             <h2 class="oe_slogan">Look up old mails</h2>
             <h3 class="oe_slogan">Browse archived mails like in odoo 8</h3>
                 <img class="oe_picture oe_screenshot" src="1.png"/>
+            <img class="oe_picture oe_screenshot" src="2.png"/>
         </div>
     </div>
 </section>
