--- a/mail_all/static/description/index.html
+++ b/mail_all/static/description/index.html
@@ -1,8 +1,8 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-            <h2 class="oe_slogan">Look up all mails</h2>
-            <h3 class="oe_slogan">Browse all mails like</h3>
+            <h2 class="oe_slogan">Show all messages</h2>
+            <h3 class="oe_slogan">Checkout all messages where you have access</h3>
         </div>
         <div class="oe_span6">
             <div class="oe_row_img oe_centered">
