[DOC] price + tiny updates

--- a/mail_archives/static/description/index.html
+++ b/mail_archives/static/description/index.html
@@ -21,7 +21,7 @@
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
             <p class="oe_mt32">
-This menu shows all messages.
+This menu shows archive messages, i.e. ones you sent or received.
             </p>
         </div>
             <div class="oe_row_img oe_centered">
