--- a/mail_all/static/description/index.html
+++ b/mail_all/static/description/index.html
@@ -4,29 +4,16 @@
             <h2 class="oe_slogan">Show all messages</h2>
             <h3 class="oe_slogan">Checkout all messages where you have access</h3>
         </div>
-        <div class="oe_span6">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+                <p class="oe_mt32">
+                    The module adds usual menu. This menu shows all messages.
+                </p>
+            </div>
             <div class="oe_row_img oe_centered">
                 <img class="oe_picture oe_screenshot" src="1.png"/>
             </div>
         </div>
-        <div class="oe_span6">
-            <p class="oe_mt32">
-                The module adds usual menu.
-            </p>
-        </div>
-    </div>
-</section>
-
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
-        <div class="oe_span12">
-            <p class="oe_mt32">
-This menu shows all messages.
-            </p>
-        </div>
-            <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="2.png"/>
-            </div>
     </div>
 </section>
 
