--- a/mail_all/static/description/index.html
+++ b/mail_all/static/description/index.html
@@ -7,7 +7,7 @@
         <div class="oe_row oe_spaced">
             <div class="oe_span12">
                 <p class="oe_mt32">
-                    The module adds usual menu. This menu shows all messages.
+                    The module adds usual menu, that shows all messages. It differs from Arhives, because it show messages where current User is not participate. Example for Administrator:
                 </p>
             </div>
             <div class="oe_row_img oe_centered">
