--- a/mail_move_message/static/description/index.html
+++ b/mail_move_message/static/description/index.html
@@ -90,6 +90,23 @@
     </div>
 </section>
 
+
+<section class="oe_container oe_dark">
+    <div class="oe_row oe_spaced">
+        <div class="oe_span12">
+            <h2>Tips and tricks</h2>
+        </div>
+        <div class="oe_span12">
+			<p class="oe_mt32">
+                The module can be used to delete a message (it's available for superuser only)
+            </p>
+            <div class="oe_demo oe_picture oe_screenshot">
+                <img src="delete-message.png"/>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
