[DOC] fix spelling

--- a/mail_private/static/description/index.html
+++ b/mail_private/static/description/index.html
@@ -14,13 +14,13 @@
           By default, to send a private message to specific recipient(s) you need to delete other followers included to the same document. The module allows to send private messages to recipients you specified, regardless of who are in the followers list.
 		</p>
 		<p>
-		  It simplified internal communication in leads, when you need to send some private messages to your colleagues before reply to customer.
-It helps in records like project tasks too. In a task with many participants, you can easily send message and only specified colleagues will be notified. It allows to have clean inbox for everybody. It's very important, because it's too easy to neglect important message in Inbox full of useless messages.
+		  It simplify internal communication in leads, when you need to send some private messages to your colleagues before reply to customer.
+It helps in records like project tasks too. In a task with many participants, you can easily send message and only specified colleagues will be notified. It allows to have clean inbox for everybody. It's very essential, because people often neglect important message in Inbox full of useless messages.
 		</p>
 	  </div>
 	</div>
 </section>
-		
+
 <section class="oe_container oe_dark">
   <div class="oe_row oe_spaced">
 	<div class="oe_span12">
