--- a/mail_sent/static/description/index.html
+++ b/mail_sent/static/description/index.html
@@ -42,6 +42,45 @@ This menu shows messages in threads (like in other menus), but shows only sent m
                 <li><a href="https://www.it-projects.info/page/website.contactus " target="_blank">
 https://www.it-projects.info/page/website.contactus <i class="fa fa-list-alt"></i></a></li>
             </ul>
+             </ul>
+        </div>
+        <div class="oe_span4">
+            <div class="stamp" style="width:200px;">
+                <div style="margin-top: 15px;
+                            position: relative;
+                            font-family:'Vollkorn', serif;
+                            font-size: 16px;
+                            line-height: 25px;
+                            text-transform: uppercase;
+                            font-weight: bold;
+                            color: #75526b;
+                            border: 3px dashed #75526b;
+                            float: left;
+                            padding: 4px 12px;
+                            -webkit-transform: rotate(6deg);
+                            -o-transform: rotate(6deg);
+                            -moz-transform: rotate(6deg);
+                            -ms-transform: rotate(6deg);">
+                    Tested on Odoo<br/>11.0 community
+                </div>
+                <div style="margin-top: 15px;
+                   position: relative;
+                   font-family:'Vollkorn', serif;
+                   font-size: 16px;
+                   line-height: 25px;
+                   text-transform: uppercase;
+                   font-weight: bold;
+                   color: #75526b;
+                   border: 3px dashed #75526b;
+                   float: left;
+                   padding: 4px 12px;
+                   -webkit-transform: rotate(-7deg);
+                   -o-transform: rotate(-7deg);
+                   -moz-transform: rotate(-7deg);
+                   -ms-transform: rotate(-7deg);">
+                     Tested on Odoo<br/>11.0 enterprise
+                </div>
+            </div>
         </div>
     </div>
 </section>
