[DOC] update docs

--- a/mail_private/static/description/index.html
+++ b/mail_private/static/description/index.html
@@ -29,7 +29,7 @@
       <h3 class="oe_slogan">How it works</h3>
       <p class="oe_mt32">
 	<font style="font-size: 120%;">
-	  Click on the "Send internal message" and choose the recipient(s). Then type any message and click on the "Send" button.
+	  Click <b>Send internal message</b>, choose the recipient(s) and send a message.
 	</font>
       </p>
       <div class="oe_screenshot" align="center">
@@ -44,11 +44,11 @@
     <div class="oe_span12 text-center">
       <p class="oe_mt32">
 	<font style="font-size: 120%;">
-          As a result you can see the message, which is sent to the corresponding recipient(s). Other followers of the document will not receive your message.
+          As a result, the message is sent to the corresponding recipient(s). Other followers will not receive the notification.
 	</font>
       </p>
       <div class="oe_screenshot" align="center">
-	<img style="max-width: 80%" src="result_message.png?1"/>
+	<img style="max-width: 80%" src="result_message.png?2"/>
       </div>
     </div>
   </div>
