[DOC] fix the styles

--- a/mail_private/static/description/index.html
+++ b/mail_private/static/description/index.html
@@ -10,15 +10,24 @@
 <section class="oe_container">
   <div class="oe_row oe_spaced">
     <div class="oe_span12">
-	<div class="alert alert-warning" style="padding:0.3em 0.6em; font-size: 120%;">
-          <p class="oe_mt32">
+      <p class="oe_mt32">
+	<div class="alert alert-warning" style="padding:0.6em 0.6em; font-size: 120%;">
           By default, to send a private message to specific recipient(s) you need to delete other followers included to the same document. The module allows to send private messages to recipients you specified, regardless of who are in the followers list.
-	  </p>
-	  <p>
-	    It simplify internal communication in leads, when you need to send some private messages to your colleagues before reply to customer.
-	    It helps in records like project tasks too. In a task with many participants, you can easily send message and only specified colleagues will be notified. It allows to have clean inbox for everybody. It's very essential, because people often neglect important message in Inbox full of useless messages.
-	  </p>
 	</div>
+      </p>
+      <div class="alert alert-success" style="padding:0.3em 0.6em; font-size: 120%;">
+	<ul style="padding-left: 1.2em;">
+	  <li style="margin-top: 0.3em;">
+	    It simplify internal communication in leads, when you need to send some private messages to your colleagues before reply to a customer.
+	  </li>
+	  <li style="margin-top: 0.3em;">
+	    It helps in records like project tasks: in a task with many participants, you can easily send message and only specified colleagues will be notified.
+	  </li>
+	  <li style="margin-top: 0.3em;">
+	    It allows to have clean inbox for everybody. It's very essential, because people often neglect important message in Inbox full of useless messages.
+	  </li>
+	</ul>
+      </div>
     </div>
   </div>
 </section>
