[DOC] fix styles

--- a/mailgun/static/description/index.html
+++ b/mailgun/static/description/index.html
@@ -15,8 +15,8 @@
 	  The module provides Odoo and Mailgun integration to be able to easily configure <em>Outgoing</em> and <em>Incoming</em> mail flow.
 	  <div style="margin-top:2%;">
 	    From Mailgun side you get:
-	    <ul>
-	      <li>
+	    <ul style="padding-left: 1.6em;">
+	      <li style="margin-top: 0.3em;">
 		Powerful Sending Infrastructure
 	      </li>
 	      <li>
@@ -43,7 +43,7 @@
     <div class="oe_span12">
       <p class="oe_mt32">
  	<font style="font-size: 120%;">
-	  <ul>
+	  <ul style="padding-left: 1.4em;">
 	    <li>
 	      Create account on <a href="https://mailgun.com" target="_blank">Mailgun</a> service
 	    </li>
@@ -144,7 +144,7 @@
     <div class="oe_span12 text-center">
       <p class="oe_mt32">
  	<font style="font-size: 120%;">
-	  Now everything is ready to move to Odoo configuration.
+	  <b>Now everything is ready to move to Odoo configuration.</b>
 	</font>
       </p>		
     </div>
