--- a/mailgun/static/description/index.html
+++ b/mailgun/static/description/index.html
@@ -11,7 +11,7 @@
   <div class="oe_row oe_spaced">
     <div class="oe_span12">
       <p class="oe_mt32">
-	<div class="alert alert-warning" style="padding:0.3em 0.6em; font-size: 150%;">
+	<div class="alert alert-success" style="padding:0.3em 0.6em; font-size: 150%;">
 	  The module provides Odoo and Mailgun integration to be able to easily configure <em>Outgoing</em> and <em>Incoming</em> mail flow.
 	  <div style="margin-top:2%;">
 	    From Mailgun side you get:
@@ -96,7 +96,7 @@
 </section>
 
 <section class="oe_container">
-  <div class="oe_row oe_spaced">
+  <div class="oe_row oe_spaced" style="margin-top: 5em;">
     <h4 class="oe_slogan"><b>Routes</b></h4>
     <div class="oe_span12 text-center">
       <p class="oe_mt32">
@@ -152,7 +152,7 @@
 </section>
 
 <section class="oe_container">
-  <div class="oe_row oe_spaced">
+  <div class="oe_row oe_spaced" style="margin-top: 6em;">
     <h3 class="oe_slogan">Odoo Configuration</h3>
     <h4 class="oe_slogan"><b>Outgoing Mail Feature</b></h4>
     <div class="oe_span12">
