[DOC] index.html

--- a/mail_move_message/static/description/index.html
+++ b/mail_move_message/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-            <h2 class="oe_slogan">Mail relocation</h2>
+            <h2 class="oe_slogan">Mail Relocation</h2>
             <h3 class="oe_slogan">Relocate customer's mails to a correct place (lead, task etc.)</h3>
         </div>
 
