[DOC] use special symbol

--- a/mailgun/static/description/index.html
+++ b/mailgun/static/description/index.html
@@ -20,7 +20,7 @@
 		Powerful Sending Infrastructure
 	      </li>
 	      <li>
-		Intelligent Inbound Routing & Storage
+		Intelligent Inbound Routing &amp; Storage
 	      </li>
 	      <li>
 		Tracking and Analytics
