:bomb: installation and deinstallation works

--- a/mail_multi_website/static/description/index.html
+++ b/mail_multi_website/static/description/index.html
@@ -17,6 +17,11 @@
 
                     <li>
                         <i class="fa fa-check-square-o text-primary"></i>
+                        Separate Mail Templates per website
+                    </li>
+
+                    <li>
+                        <i class="fa fa-check-square-o text-primary"></i>
                         <em>From</em> address in email has address for current Website
                     </li>
 
