:bomb: make signature per website

--- a/mail_multi_website/static/description/index.html
+++ b/mail_multi_website/static/description/index.html
@@ -30,6 +30,11 @@
                         <em>Reply-To</em> address in email has domain of current Website
                     </li>
 
+                    <li>
+                        <i class="fa fa-check-square-o text-primary"></i>
+                        User's signature per Website
+                    </li>
+
                 </ul>
             </div>
 
